gcc/testsuite/rust/rustc/ui/parser/mismatched-braces/missing-close-brace-in-impl-trait.rs
fn main() {}

impl T for () {

fn foo(&self) {}

trait T {
    fn foo(&self);
}

pub(crate) struct Bar<T>();

// { dg-error "" "" { target *-*-* } }

